--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-  "[r]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "Posit.air-vscode"
-  },
-  "[quarto]": {
-    "editor.formatOnSave": false
-  }
+    "[r]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "Posit.air-vscode"
+    },
+    "[quarto]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "quarto.quarto"
+    }
 }
