--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,13 +25,13 @@ website:
       - text: Tutorials
         menu:
           - text: "Tutorial 1: Protected Areas and Subsea Infrastructure"
-            href: tutorial-01.qmd
+            href: tutorials/tutorial-01.qmd
           - text: "Tutorial 2: Zooplankton and Plaice Nurseries"
-            href: tutorial-02.qmd
+            href: tutorials/tutorial-02.qmd
           - text: "Tutorial 3: Biodiversity Change and Depth"
-            href: tutorial-03.qmd
+            href: tutorials/tutorial-03.qmd
           - text: "Tutorial 4: Functional Traits Across Habitats"
-            href: tutorial-04.qmd
+            href: tutorials/tutorial-04.qmd
       - about.qmd
     right:
       - icon: github
