Add comprehensive Geospatial Concepts & Glossary page
Create new concepts.qmd page covering foundational spatial data knowledge:
- Spatial data types (vector vs raster) with visual comparison
- Web services (WFS/WCS) with workflow diagrams and EPSG code explanation
- Coordinate reference systems with orange peel analogy and projection comparisons
- CRS examples showing WGS84, Web Mercator, and LAEA with Europe/Greenland
- Key R packages (sf, terra) and their use cases
- Common spatial operations for vector and raster data
- Data formats and their implications for web service requests
- Bounding boxes with North Sea example visualization
- Glossary table with 23 common geospatial terms
- External resources organized by category

Add Geospatial Concepts link to main navigation in _quarto.yml

Move EMODnet web services maintenance information from concepts to About page for better organizational context

All figures include proper labels for cross-referencing (fig-*, tbl-*) and are referenced in text. Plots use hidden R code with :: notation.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,8 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - href: concepts.qmd
+        text: Geospatial Concepts
       - text: Tutorials
         menu:
           - text: "Tutorial 1: Protected Areas and Subsea Infrastructure"
