Add DESCRIPTION file and update workflow for dependency management
- Populate DESCRIPTION with project metadata and dependencies
- Imports: user-facing packages taught in tutorials (emodnet.wfs, emodnet.wcs, sf, terra, dplyr, ggplot2)
- Config/Needs/website: website-building packages (knitr, rmarkdown, tibble, kableExtra, rnaturalearth, patchwork)
- Update publish.yml workflow to use DESCRIPTION for dependency installation
- Specify dual license via LICENSE file reference

This centralizes dependency management and ensures the workflow installs all required packages for building the website.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,10 +29,8 @@ jobs:
       - name: Install R Dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          packages: |
-            any::knitr
-            any::rmarkdown
-            any::jsonlite
+          extra-packages: any::jsonlite
+          needs: website
 
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
