Complete CI/CD implementation for issue #7
This completes all outstanding tasks from issue #7:

## Workflow Enhancements (.github/workflows/publish.yml)
- Add link checking with Lychee
  - Shows job summary for all runs (visible in Actions tab)
  - Creates GitHub issues only on scheduled runs
  - Non-blocking for PRs/pushes to allow deployment
  - Blocking for scheduled runs for visibility
- Add scheduled runs (weekly, Mondays 9am UTC)
  - Catches broken links and service issues proactively
  - Creates actionable issues when problems detected

## Documentation (README.md)
- Add workflow status badge linking to Actions page
- Update site URLs (remove placeholders)
- Add TODO comment for future EMODnet organization migration
- Document working through tutorials interactively (for learners)
  - Clone repo, install packages, run .qmd files in RStudio
- Document building website locally (for contributors)
  - Install Quarto, preview and render site
- Document troubleshooting workflow failures
  - Common issues, broken link handling, local testing

Closes #7

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ on:
     branches: main
   pull_request:
     branches: main
+  schedule:
+    # Run every Monday at 9am UTC to catch broken links/service issues
+    - cron: '0 9 * * 1'
 
 name: Quarto Publish
 
@@ -49,6 +52,18 @@ jobs:
 
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
+
+      - name: Check links with Lychee
+        uses: lycheeverse/lychee-action@v2
+        with:
+          args: --verbose --no-progress --exclude-mail './_site/**/*.html'
+          fail: true
+          jobSummary: true
+          # Only create issues on scheduled runs
+          issueTitle: ${{ github.event_name == 'schedule' && 'Broken links detected (scheduled check)' || '' }}
+          issueLabels: ${{ github.event_name == 'schedule' && 'bug,documentation,scheduled-check' || '' }}
+        # Don't block deployment for PR/push, but do block for scheduled runs
+        continue-on-error: ${{ github.event_name != 'schedule' }}
 
       - name: Publish to GitHub Pages (Production)
         if: contains(env.PUBLISH, 'true')
