Add utility functions for Quarto output paths
- Add R/quarto-utils.R with get_quarto_output_dir() and get_output_path()
  for saving rendered artifacts to the correct location
- Add yaml to DESCRIPTION Imports
- Add tutorials/interactive_map.html to .gitignore (generated during render)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,20 +18,31 @@ Encoding: UTF-8
 URL: https://github.com/r-rse/emodnet-bio-r-geo-tutorials
 BugReports: https://github.com/r-rse/emodnet-bio-r-geo-tutorials/issues
 Imports:
+    cli,
     emodnet.wfs,
     emodnet.wcs,
+    here,
+    pins,
+    rlang,
     sf,
     terra,
     dplyr,
-    ggplot2
+    ggplot2,
+    yaml
 Remotes:
     EMODnet/emodnet.wfs,
     EMODnet/emodnet.wcs
 Config/Needs/website:
+    DT,
     knitr,
+    pkgload,
     rmarkdown,
     tibble,
     kableExtra,
     rnaturalearth,
     rnaturalearthdata,
     patchwork
+RoxygenNote: 7.3.2
+Depends: 
+    R (>= 3.5)
+LazyData: true
