--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,8 @@ jobs:
       NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
       NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
       PUBLISH: ${{ github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && inputs.publish) }}
+      # Flush EMODnet data cache on scheduled builds to ensure fresh data
+      EMODNET_CACHE_FLUSH: ${{ github.event_name == 'schedule' }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -47,7 +49,7 @@ jobs:
       - name: Install R Dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::jsonlite
+          extra-packages: any::jsonlite, local::.
           needs: website
 
       - name: Render Quarto Project
