Add Tutorial 2: Copepods and Fish Spawning Grounds
This tutorial demonstrates WCS raster data access with emodnet.wcs,
combining copepod distribution data from EMODnet Biology with fish
spawning ground suitability data from EMODnet Seabed Habitats.

Key features:
- Accessing and exploring multi-dimensional WCS coverages
- Temporal subsetting to extract specific time periods
- Aligning rasters with different resolutions and coordinate systems
- Building tidy data frames from raster values using tidyterra
- Exploratory analysis comparing conditions across habitat types
- Interactive map visualization with tmap (radio button layer switching)

Supporting changes:
- Add bibliography (references.bib) with ecological citations
- Update nav menu title in _quarto.yml
- Add tidyr and tidyterra to website dependencies
- Add warning about caching WCS/terra objects in CONTRIBUTING.md
- Add WKT explanation to concepts.qmd
- Ignore generated HTML files in tutorials/

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,8 @@ Config/Needs/website:
     purrr,
     rmarkdown,
     tibble,
+    tidyr,
+    tidyterra,
     kableExtra,
     rnaturalearth,
     rnaturalearthdata,
