--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .Rhistory
 .RData
 .Ruserdata
+Rplots.pdf
 .attic
 .claude
 claude.md
@@ -14,7 +15,7 @@ _freeze/
 *_files/
 
 # Generated during render
-tutorials/interactive_map.html
+tutorials/*.html
 lib/
 
 # Cached data
