--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,7 +28,7 @@ website:
         menu:
           - text: "Tutorial 1: Protected Areas and Subsea Infrastructure"
             href: tutorials/tutorial-01.qmd
-          - text: "Tutorial 2: Zooplankton and Plaice Nurseries"
+          - text: "Tutorial 2: Copepods and Fish Spawning Grounds"
             href: tutorials/tutorial-02.qmd
           - text: "Tutorial 3: Biodiversity Change and Depth"
             href: tutorials/tutorial-03.qmd
