feat: add code linking
https://quarto.org/docs/output-formats/html-code.html#code-linking

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,6 +59,7 @@ format:
     code-fold: false
     code-tools: false
     code-copy: true
+    code-link: true
     link-external-newwindow: true
     link-external-icon: true
 
